syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message Integer {
    int32 a = 1;
}

message SumRequest {
    Integer a = 1;
    Integer b = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 prime = 1;
}

message PrimeNumberDecompositionResponse {
    int32 primeFactor = 1;
}

service CalculatorService{
    //Unary
    rpc Calculator(SumRequest) returns (SumResponse) {};

    // PrimeNumberDecomposition API
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}